<resources>
    <string name="app_name">Tidey</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!--    <string name="title_home">Home</string>-->
    <!--    <string name="title_dashboard">Dashboard</string>-->
    <!--    <string name="title_notifications">Notifications</string>-->
    <!--    <string name="title_map">Map</string>-->
    <string name="title_map">Map</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_event">Create Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">TrashSitesMap</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_join_event">Join Event</string>
</resources>
