<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

<!--    if above is changed to "navigation_map," app stops working-->

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.hacksc.trashyredditapp.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.hacksc.trashyredditapp.ui.dashboard.DashboardFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="edu.hacksc.trashyredditapp.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="edu.hacksc.trashyredditapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.hacksc.trashyredditapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.hacksc.trashyredditapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


    <activity
        android:id="@+id/navigation_map"
        android:name="edu.hacksc.trashyredditapp.MapsActivity"
        android:label="@string/title_map"
        tools:layout="@layout/activity_maps" />
<!--    <fragment-->
<!--        android:id="@+id/navigation_map"-->
<!--        android:name="edu.hacksc.trashyredditapp.MapFragment"-->
<!--        android:label="@string/title_map"-->
<!--        tools:layout="@layout/activity_maps" />-->
</navigation>